[package]
name = "pknocker-stream"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
aws-config = "0.55.2"
aws-sdk-ec2 = "0.27.0"
aws-sdk-secretsmanager = "0.27.0"
aws_lambda_events = { version = "0.8.5", default-features = false, features = ["s3"] }
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", features = ["postgres", "serde_json", "uuid", "network-address", "ipnet-address", "r2d2", "time", "chrono"] }
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
futures-util = "0.3.28"
ipnetwork = "0.20.0"
lambda_runtime = "0.8.0"
once_cell = "1.17.1"
postgres-native-tls = "0.5.0"
rustls = "0.21.0"
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros", "full"] }
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.10.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["local-time", "parking_lot", "tracing-log"] }
